# sungrow-winet-hacs-homeassistant

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FILE_LISTING.md  INSTALLATION.md  LICENSE  LICENSE.txt  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  gitignore.txt  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
custom_components/sungrow_winet_s/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py
custom_components/sungrow_winet_s/api/: __init__.py  cloud_client.py  http_client.py  modbus_client.py
custom_components/sungrow_winet_s/translations/: en.json
frontend/: .env
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_modbus_client.py  test_sensor.py
